src/test/ui/borrowck/borrowck-mut-addr-of-imm-var.stderr
error[E0596]: cannot borrow `x` as mutable, as it is not declared as mutable
  --> $DIR/borrowck-mut-addr-of-imm-var.rs:3:25
   |
LL |     let x: isize = 3;
   |         - help: consider changing this to be mutable: `mut x`
LL |     let y: &mut isize = &mut x;
   |                         ^^^^^^ cannot borrow as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
